--- a/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor.css
+++ b/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor.css
@@ -12,7 +12,6 @@
 }
 
 .empty::before,
-.updating::before,
 .failed::before
 {
   display: block;
@@ -24,11 +23,10 @@
   background-color: rgba(255, 255, 255, 0.7);
   visibility: visible !important;
   content: "";
-  z-index: 10000;
+  z-index: 10;
 }
 
 .empty::after,
-.updating::after,
 .failed::after
 {
   display: block;
@@ -40,19 +38,13 @@
   font-size: 1.5em;
   visibility: visible !important;
   content: "";
-  z-index: 10001;
+  z-index: 11;
 }
 
 .empty::after
 {
   color: darkcyan;
   content: attr(data-empty-notice);
-}
-
-.updating::after
-{
-  color: darkcyan;
-  content: attr(data-updating-notice);
 }
 
 .failed::after
@@ -62,7 +54,7 @@
 }
 
 /*noinspection CssInvalidPseudoSelector*/
-.updating ::deep *,
+.loading ::deep *,
 .failed ::deep *,
 .empty ::deep *
 {
