--- a/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor.css
+++ b/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor.css
@@ -6,9 +6,24 @@
   Copyright © 2020-2021 Maxim Yudin <stibiu@yandex.ru>
  */
 
+.top-0
+{
+  top: 0 !important;
+}
+
 .bottom-0
 {
   bottom: 0 !important;
+}
+
+.left-0
+{
+  left: 0 !important;
+}
+
+.right-0
+{
+  right: 0 !important;
 }
 
 .empty::before,
