Created the status page for Monitor.
This page displays the latest logged climatic data entry and mini-charts
showing the time tendencies of the magnitudes.

--- a/PiClimate.Monitor.WebAssembly/Pages/Components/AuthPanel.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/AuthPanel.razor
@@ -53,7 +53,7 @@
     @if (AuthenticationMessages.Any() || editContext.GetValidationMessages().Any())
     {
       <div class="alert alert-dark text-info text-center mt-3 mb-0">
-        <ul class="m-0">
+        <ul class="list-unstyled m-0">
           @foreach (var message in AuthenticationMessages)
           {
             <li>@message</li>
