--- a/PiClimate.Monitor.WebAssembly/Pages/Components/DataSummary.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/DataSummary.razor
@@ -14,7 +14,7 @@
 <div id="data-summary-wrapper" class="px-4">
   <div class="text-center w-100">
     <a href="#data-summary" data-toggle="collapse"
-       class="d-inline-block dropdown-toggle bg-dark text-light text-decoration-none rounded-top px-2 py-1 collapsed">
+       class="d-inline-block dropdown-toggle bg-dark text-light text-decoration-none text-wrap rounded-top px-2 py-1 collapsed">
       Data summary
     </a>
   </div>
