--- a/PiClimate.Monitor.WebAssembly/Pages/Components/MiniChart.razor.css
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/MiniChart.razor.css
@@ -1,17 +1,12 @@
-﻿@*
+/*
   This Source Code Form is subject to the terms of the Mozilla Public
   License, v. 2.0. If a copy of the MPL was not distributed with this
   file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
   Copyright © 2020-2021 Maxim Yudin <stibiu@yandex.ru>
-*@
+ */
 
-@page "/"
-@attribute [Authorize]
-@inject NavigationManager _navigationManager
-
-@code
+.mini-chart-canvas
 {
-  /// <inheritdoc />
-  protected override void OnInitialized() => _navigationManager.NavigateTo(Status.PathPrefix);
+  display: none;
 }
