--- a/PiClimate.Monitor.WebAssembly/Pages/Components/UpdateButton.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/UpdateButton.razor
@@ -8,7 +8,7 @@
 
 @inject NavigationManager _navigationManager
 
-<div class="d-inline-block">
+<div class="update-button d-inline-block">
   <a href="@_navigationManager.Uri" title="Update" @onclick="@UpdateAsync">
     <div class="update-icon"></div>
   </a>
