Updated Chart.js to v3.2.
Also updated NuGet packages.

--- a/PiClimate.Monitor.WebAssembly/Pages/Chart.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Chart.razor
@@ -104,7 +104,7 @@
   public bool AreMeasurementsEmpty => !IsUpdating && !HasUpdateFailed && Measurements?.Any() != true;
 
   /// <summary>
-  ///   Gets or sets the chart settings object.
+  ///   Gets the climatic chart settings object.
   /// </summary>
   private ChartSettings ChartSettings { get; } = new()
   {
