--- a/PiClimate.Monitor.WebAssembly/Pages/Status.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Status.razor
@@ -11,69 +11,58 @@
 @inject IHttpClientFactory _httpClientFactory
 
 <CascadingValue Value="@this">
-  <div class="position-relative d-flex flex-column h-100 @(IsUpdating ? "loading" : "")">
+  <div class="position-relative d-flex flex-column h-100 m-2 @(IsUpdating ? "loading" : "")">
     <div class="position-fixed z-1">
       <UpdateButton />
     </div>
 
-    <div class="alert alert-secondary h4 text-center rounded-0 mb-2">
-      Latest data
-    </div>
-
-    @if (LatestMeasurement != null && Measurements?.Any() == true)
+    @if (HasUpdateFailed)
     {
-      var pressureChartSettings = new MiniChartSettings
-      {
-        MiniChartId = "pressure-mini-chart",
-        LineColor = "blue"
-      };
-      var temperatureChartSettings = new MiniChartSettings
-      {
-        MiniChartId = "temperature-mini-chart",
-        LineColor = "green"
-      };
-      var humidityChartSettings = new MiniChartSettings
-      {
-        MiniChartId = "humidity-mini-chart",
-        LineColor = "red"
-      };
-      var pressureDataPoints = Measurements.Select(
-        measurement => (measurement.Timestamp, measurement.PressureInMmHg));
-      var temperatureDataPoints = Measurements.Select(
-        measurement => (measurement.Timestamp, measurement.TemperatureInDegC));
-      var humidityDataPoints = Measurements.Select(
-        measurement => (measurement.Timestamp, measurement.HumidityInPercent));
-
+      <div class="alert alert-danger h5 text-center">
+        Failed to receive the latest data.
+      </div>
+    }
+    else if (AreMeasurementsEmpty)
+    {
+      <div class="alert alert-info h5 text-center">
+        There is no latest data to be displayed.
+      </div>
+    }
+    else
+    {
       <div class="d-flex flex-row flex-wrap w-100 p-2">
+        <div class="col-12 text-center text-date">
+          <div class="h4">
+            Latest data
+          </div>
+
+          <div class="h6">
+            (@LatestMeasurement.Timestamp.ToString(LocalizationUtils.GetBrowserCultureInfo()))
+          </div>
+        </div>
+
         <div class="col-12 col-xl-4 text-center text-pressure p-2 mb-2">
           <div class="h5">Pressure</div>
-          <div class="h4">@LatestMeasurement.Pressure.ToString(CultureInfo)</div>
+          <div class="h4">@LatestMeasurement.Pressure.ToString(LocalizationUtils.GetBrowserCultureInfo())</div>
           <div class="mini-chart chart-pressure">
-            <MiniChart MiniChartSettings="@pressureChartSettings" DataPoints="@pressureDataPoints"
-                       PeriodStart="@PeriodStart" PeriodEnd="@PeriodEnd" />
+            <MiniChart MiniChartSettings="@PressureChartSettings" DataPoints="@PressureDataPoints" PeriodStart="@PeriodStart" PeriodEnd="@PeriodEnd" />
           </div>
         </div>
 
         <div class="col-12 col-xl-4 text-center text-temperature p-2 mb-2">
           <div class="h5">Temperature</div>
-          <div class="h4">@LatestMeasurement.Temperature.ToString(CultureInfo)</div>
+          <div class="h4">@LatestMeasurement.Temperature.ToString(LocalizationUtils.GetBrowserCultureInfo())</div>
           <div class="mini-chart chart-temperature">
-            <MiniChart MiniChartSettings="@temperatureChartSettings" DataPoints="@temperatureDataPoints"
-                       PeriodStart="@PeriodStart" PeriodEnd="@PeriodEnd" />
+            <MiniChart MiniChartSettings="@TemperatureChartSettings" DataPoints="@TemperatureDataPoints" PeriodStart="@PeriodStart" PeriodEnd="@PeriodEnd" />
           </div>
         </div>
 
         <div class="col-12 col-xl-4 text-center text-humidity p-2 mb-2">
           <div class="h5">Humidity</div>
-          <div class="h4">@LatestMeasurement.Humidity.ToString(CultureInfo)</div>
+          <div class="h4">@LatestMeasurement.Humidity.ToString(LocalizationUtils.GetBrowserCultureInfo())</div>
           <div class="mini-chart chart-humidity">
-            <MiniChart MiniChartSettings="@humidityChartSettings" DataPoints="@humidityDataPoints"
-                       PeriodStart="@PeriodStart" PeriodEnd="@PeriodEnd" />
+            <MiniChart MiniChartSettings="@HumidityChartSettings" DataPoints="@HumidityDataPoints" PeriodStart="@PeriodStart" PeriodEnd="@PeriodEnd" />
           </div>
-        </div>
-
-        <div class="col-12 h4 text-center text-date">
-          <div class="h6">(@LatestMeasurement.Timestamp.ToString(CultureInfo))</div>
         </div>
       </div>
     }
@@ -112,14 +101,32 @@
   private int ChartResolution => 50;
 
   /// <summary>
-  ///   Gets the latest logged measurement.
+  ///   Gets or sets the latest logged measurement.
   /// </summary>
-  private Measurement? LatestMeasurement { get; set; }
+  private Measurement LatestMeasurement { get; set; } = new();
 
   /// <summary>
-  ///   Gets or sets an enumeration of measurements to be displayed on a chart.
+  ///   Gets or sets the enumeration of measurements to be displayed on the mini-charts.
   /// </summary>
-  private IEnumerable<Measurement>? Measurements { get; set; }
+  private IEnumerable<Measurement> Measurements { get; set; } = Array.Empty<Measurement>();
+
+  /// <summary>
+  ///   Gets the enumeration of pressure data points to be displayed on the pressure mini-chart.
+  /// </summary>
+  private IEnumerable<(DateTime Timestamp, double Value)> PressureDataPoints =>
+    Measurements.Select(measurement => (measurement.Timestamp, measurement.PressureInMmHg));
+
+  /// <summary>
+  ///   Gets the enumeration of temperature data points to be displayed on the temperature mini-chart.
+  /// </summary>
+  private IEnumerable<(DateTime Timestamp, double Value)> TemperatureDataPoints =>
+    Measurements.Select(measurement => (measurement.Timestamp, measurement.TemperatureInDegC));
+
+  /// <summary>
+  ///   Gets the enumeration of humidity data points to be displayed on the humidity mini-chart.
+  /// </summary>
+  private IEnumerable<(DateTime Timestamp, double Value)> HumidityDataPoints =>
+    Measurements.Select(measurement => (measurement.Timestamp, measurement.HumidityInPercent));
 
   /// <inheritdoc />
   public bool IsUpdating { get; private set; }
@@ -130,13 +137,37 @@
   /// <summary>
   ///   Checks if empty measurements data have been acquired from the last request.
   /// </summary>
-  public bool AreMeasurementsEmpty => !IsUpdating && !HasUpdateFailed && (LatestMeasurement == null ||
-    Measurements?.Any() != true);
+  private bool AreMeasurementsEmpty => !IsUpdating && !HasUpdateFailed && !Measurements.Any();
 
   /// <summary>
-  ///   Gets the current browser's culture information.
+  ///   Gets the pressure mini-chart settings object.
   /// </summary>
-  public CultureInfo CultureInfo { get; } = LocalizationUtils.GetBrowserCultureInfo();
+  private MiniChartSettings PressureChartSettings { get; } = new()
+  {
+    CanvasElementId = "pressure-mini-chart",
+    LineColor = "blue",
+    CultureInfo = LocalizationUtils.GetBrowserCultureInfo()
+  };
+
+  /// <summary>
+  ///   Gets the temperature mini-chart settings object.
+  /// </summary>
+  private MiniChartSettings TemperatureChartSettings { get; } = new()
+  {
+    CanvasElementId = "temperature-mini-chart",
+    LineColor = "green",
+    CultureInfo = LocalizationUtils.GetBrowserCultureInfo()
+  };
+
+  /// <summary>
+  ///   Gets the humidity mini-chart settings object.
+  /// </summary>
+  private MiniChartSettings HumidityChartSettings { get; } = new()
+  {
+    CanvasElementId = "humidity-mini-chart",
+    LineColor = "red",
+    CultureInfo = LocalizationUtils.GetBrowserCultureInfo()
+  };
 
   /// <inheritdoc />
   public async Task UpdateAsync()
@@ -155,7 +186,7 @@
         ApiEndpoints.LatestMeasurementsDataEndpoint, new LatestDataRequest {MaxRows = 1});
 
       if (response?.StatusCode == 200)
-        LatestMeasurement = response.Data?.FirstOrDefault();
+        LatestMeasurement = response.Data?.FirstOrDefault() ?? new Measurement();
       else
         throw new HttpResponseException(response != null
           ? $"[{response.StatusCode}] {response.Description}"
@@ -170,7 +201,7 @@
         });
 
       if (response?.StatusCode == 200)
-        Measurements = response.Data;
+        Measurements = response.Data ?? Array.Empty<Measurement>();
       else
         throw new HttpResponseException(response != null
           ? $"[{response.StatusCode}] {response.Description}"
