Fixed WebAPI requests authentication.
In some browsers, the authentication cookie was not being sent
automatically with WebAPI requests.
Also changed the informational version to v2.0.0-beta.

--- a/PiClimate.Monitor.WebAssembly/Pages/Status.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Status.razor
@@ -11,7 +11,7 @@
 @inject IHttpClientFactory _httpClientFactory
 
 <CascadingValue Value="@this">
-  <div class="position-relative d-flex flex-column h-100 m-2 @(IsUpdating ? "loading" : "")">
+  <div class="position-relative d-flex flex-column h-100 p-2 @(IsUpdating ? "loading" : "")">
     <div class="position-fixed z-1">
       <UpdateButton />
     </div>
