--- a/PiClimate.Monitor.WebAssembly/wwwroot/style.css
+++ b/PiClimate.Monitor.WebAssembly/wwwroot/style.css
@@ -18,9 +18,14 @@
   --dark-humidity-color: red;
 }
 
-body
+#wrapper
 {
-  min-width: 750px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  min-width: 300px;
 }
 
 #blazor-error-ui
