--- a/PiClimate.Monitor.WebAssembly/Pages/Components/DataSummary.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/DataSummary.razor
@@ -22,25 +22,25 @@
   <div id="data-summary" class="data-summary container-fluid collapse bg-dark rounded-top w-100">
     <div class="p-2">
       <div class="text-date row">
-        <div class="text-right col-3 col-xl-2">
+        <div class="text-left text-sm-right col-12 col-sm-3 col-xl-2">
           Period start:
         </div>
-        <div class="text-left col-9 col-xl-4">
+        <div class="text-right text-sm-left col-12 col-sm-9 col-xl-4">
           @Measurements.Min(measurement => measurement.Timestamp).ToString(CultureInfo)
         </div>
-        <div class="text-right col-3 col-xl-2">
+        <div class="text-left text-sm-right col-12 col-sm-3 col-xl-2">
           Period end:
         </div>
-        <div class="text-left col-9 col-xl-4">
+        <div class="text-right text-sm-left col-12 col-sm-9 col-xl-4">
           @Measurements.Max(measurement => measurement.Timestamp).ToString(CultureInfo)
         </div>
       </div>
 
       <div class="text-pressure row">
-        <div class="text-right col-3 col-xl-2">
+        <div class="text-left text-sm-right col-12 col-sm-3 col-xl-2">
           Min pressure:
         </div>
-        <div class="text-left col-9 col-xl-4">
+        <div class="text-right text-sm-left col-12 col-sm-9 col-xl-4">
           @{
             var minPressure = Measurements.Min(measurement => measurement.Pressure);
             var minPressureTimestamp =
@@ -48,10 +48,10 @@
             @($"{minPressure.ToString("F3", CultureInfo)} ({minPressureTimestamp.ToString(CultureInfo)})")
           }
         </div>
-        <div class="text-right col-3 col-xl-2">
+        <div class="text-left text-sm-right col-12 col-sm-3 col-xl-2">
           Max pressure:
         </div>
-        <div class="text-left col-9 col-xl-4">
+        <div class="text-right text-sm-left col-12 col-sm-9 col-xl-4">
           @{
             var maxPressure = Measurements.Max(measurement => measurement.Pressure);
             var maxPressureTimestamp =
@@ -62,10 +62,10 @@
       </div>
 
       <div class="text-temperature row">
-        <div class="text-right col-3 col-xl-2">
+        <div class="text-left text-sm-right col-12 col-sm-3 col-xl-2">
           Min temperature:
         </div>
-        <div class="text-left col-9 col-xl-4">
+        <div class="text-right text-sm-left col-12 col-sm-9 col-xl-4">
           @{
             var minTemperature = Measurements.Min(measurement => measurement.Temperature);
             var minTemperatureTimestamp =
@@ -73,10 +73,10 @@
             @($"{minTemperature.ToString("F3", CultureInfo)} ({minTemperatureTimestamp.ToString(CultureInfo)})")
           }
         </div>
-        <div class="text-right col-3 col-xl-2">
+        <div class="text-left text-sm-right col-12 col-sm-3 col-xl-2">
           Max temperature:
         </div>
-        <div class="text-left col-9 col-xl-4">
+        <div class="text-right text-sm-left col-12 col-sm-9 col-xl-4">
           @{
             var maxTemperature = Measurements.Max(measurement => measurement.Temperature);
             var maxTemperatureTimestamp =
@@ -87,10 +87,10 @@
       </div>
 
       <div class="text-humidity row">
-        <div class="text-right col-3 col-xl-2">
+        <div class="text-left text-sm-right col-12 col-sm-3 col-xl-2">
           Min humidity:
         </div>
-        <div class="text-left col-9 col-xl-4">
+        <div class="text-right text-sm-left col-12 col-sm-9 col-xl-4">
           @{
             var minHumidity = Measurements.Min(measurement => measurement.Humidity);
             var minHumidityTimestamp =
@@ -98,10 +98,10 @@
             @($"{minHumidity.ToString("F3", CultureInfo)} ({minHumidityTimestamp.ToString(CultureInfo)})")
           }
         </div>
-        <div class="text-right col-3 col-xl-2">
+        <div class="text-left text-sm-right col-12 col-sm-3 col-xl-2">
           Max humidity:
         </div>
-        <div class="text-left col-9 col-xl-4">
+        <div class="text-right text-sm-left col-12 col-sm-9 col-xl-4">
           @{
             var maxHumidity = Measurements.Max(measurement => measurement.Humidity);
             var maxHumidityTimestamp =
@@ -112,10 +112,10 @@
       </div>
 
       <div class="text-info statistics row">
-        <div class="text-right col-3 col-xl-2">
+        <div class="text-left text-sm-right col-12 col-sm-3 col-xl-2">
           Entries displayed:
         </div>
-        <div class="text-left col-9 col-xl-4">
+        <div class="text-right text-sm-left col-12 col-sm-9 col-xl-4">
           @Measurements.Count()
         </div>
       </div>
