--- a/PiClimate.Monitor.WebAssembly/Pages/Components/NavMenu.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/NavMenu.razor
@@ -16,14 +16,14 @@
     <a class="navbar-brand align-baseline mr-2" href="/">
       @nameof(PiClimate) @nameof(Monitor)
     </a>
-    <span class="text-sm-left text-secondary align-baseline">
+    <div class="d-inline-block text-sm-left text-secondary align-baseline">
       v@(GetType().Assembly.GetCustomAttribute<AssemblyInformationalVersionAttribute>()?.InformationalVersion ?? "???")
-    </span>
+    </div>
   </li>
 
-  <hr class="d-none d-lg-block border-light w-100 my-2" />
+  <hr class="d-block d-sm-none d-lg-block border-light w-100 my-2" />
 
-  <li class="flex-fill d-lg-none"></li>
+  <li class="flex-fill col col-sm-auto d-lg-none"></li>
 
   <li class="nav-item px-2">
     <div class="nav-link text-light">
