--- a/PiClimate.Monitor.WebAssembly/Pages/Components/UpdateButton.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/UpdateButton.razor
@@ -14,7 +14,8 @@
   </a>
 </div>
 
-@code {
+@code
+{
   /// <summary>
   ///   Gets or sets the components that needs to be updated on clicking the update button.
   /// </summary>
